# namefix

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  release.yml
.husky/: pre-push
Auto Run Docs/Initiation/: Phase-01-Environment-Setup-and-Verification.md  Phase-02-ConversionService-and-TrashService.md  Phase-03-Profile-Schema-and-Pipeline-Routing.md  Phase-04-EventBus-and-Integration-Tests.md  Phase-05-TUI-Updates.md  Phase-06-Menu-Bar-App-Updates.md  Phase-07-End-to-End-Validation.md
apps/menu-bar/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/menu-bar/src/: main.ts
apps/menu-bar/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/menu-bar/src-tauri/capabilities/: menu-bar.json
apps/menu-bar/src-tauri/icons/: namefix.icns
apps/menu-bar/src-tauri/resources/: service-bridge.mjs
apps/menu-bar/src-tauri/src/: bridge.rs  ipc.rs  main.rs  tray.rs
docs/: diagnostics.md  service-api.md  tauri-guide.md  tauri-testing-strategy.md
scripts/: collect-artifacts.mjs  set-version.mjs  stage-dist.mjs
src/: cli.ts
src/cli/: NamefixCLI.ts  explain.ts  index.ts
src/core/: App.ts  NamefixService.spec.ts  NamefixService.ts
src/core/config/: ConfigStore.spec.ts  ConfigStore.ts
src/core/convert/: ConversionPipeline.spec.ts  ConversionService.spec.ts  ConversionService.ts  TrashService.spec.ts  TrashService.ts
src/core/events/: EventBus.ts
src/core/fs/: FsSafe.ts  WatchService.ts
src/core/journal/: JournalStore.ts
src/core/log/: Logger.ts
src/core/rename/: Matcher.ts  NameTemplate.ts  RenameService.spec.ts  RenameService.ts
src/integrations/: LaunchdPrinter.ts
src/tui/: BaseView.ts  ScreenManager.ts  ThemeManager.ts
src/tui/components/: EventListView.ts  FooterView.ts  HeaderView.ts  SettingsModalView.ts  (+1 more)
src/types/: index.ts  service.ts
src/utils/: TypedEmitter.ts  paths.spec.ts  paths.ts
