[package]
name = "namefix_menu_bar"
version = "0.3.4"
edition = "2021"
description = "Namefix menu bar companion"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.1", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = { version = "2.5.1" }
tauri-plugin-single-instance = { version = "2.4.0" }
tokio = { version = "1.37", features = ["process", "sync", "io-util", "time"] }
which = "6.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = []
